fix: alignment of user homepage on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -655,6 +655,6 @@ button.btn:active {
   }
 
   .main {
-    grid-column-start: 2;
+    grid-column-start: 1;
   }
 }
